<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_choose_list"
        android:orderInCategory="100"
        android:title="@string/choose_list">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/most_popular"
                    android:title="@string/most_popular" />
                <item
                    android:id="@+id/highest_rated"
                    android:title="@string/highest_rated" />
                <item
                    android:id="@+id/now_playing"
                    android:title="@string/now_playing" />
                <item
                    android:id="@+id/upcoming"
                    android:title="@string/upcoming" />
            </group>
        </menu>

    </item>

</menu>